--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,33 +38,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Einnahme / Ausgabe</th>\n",
+       "      <th>Konto</th>\n",
+       "      <th>Datum</th>\n",
+       "      <th>Betrag</th>\n",
+       "      <th>Gewinn</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Prognose:</th>\n",
+       "      <th>2599.51</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Aufwandsentschädigung Trainer</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>-3200</td>\n",
+       "      <td>5274.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Aufwandsentschädigung RSA Kurse</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2002-12-01</td>\n",
+       "      <td>-150</td>\n",
+       "      <td>5124.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Weihnachtsfeier</td>\n",
+       "      <td>87</td>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>-1800</td>\n",
+       "      <td>3324.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Spenden</td>\n",
+       "      <td>32</td>\n",
+       "      <td>2024-12-15</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>4324.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Zuschuss Rettungswache</td>\n",
+       "      <td>605</td>\n",
+       "      <td>2024-10-12</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>6824.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Eigenbeteiligung DMM</td>\n",
+       "      <td>607</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>75</td>\n",
+       "      <td>6899.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sponsoring Kübler</td>\n",
+       "      <td>806</td>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>500</td>\n",
+       "      <td>7399.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Öka / Ehrungen</td>\n",
+       "      <td>42</td>\n",
+       "      <td>2024-12-15</td>\n",
+       "      <td>-200</td>\n",
+       "      <td>7199.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ausflüge</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2024-12-01</td>\n",
+       "      <td>-500</td>\n",
+       "      <td>6699.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hallenbad Wernau</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2024-11-05</td>\n",
+       "      <td>-3200</td>\n",
+       "      <td>3499.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DMM</td>\n",
+       "      <td>67</td>\n",
+       "      <td>2024-11-01</td>\n",
+       "      <td>-900</td>\n",
+       "      <td>2599.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0                   Sponsoring Kübler\n",
-       "1              Zuschuss Rettungswache\n",
-       "2                Eigenbeteiligung DMM\n",
-       "3                                 DMM\n",
-       "4                    Hallenbad Wernau\n",
-       "5       Aufwandsentschädigung Trainer\n",
-       "6     Aufwandsentschädigung RSA Kurse\n",
-       "7                            Ausflüge\n",
-       "8                             Spenden\n",
-       "9                      Öka / Ehrungen\n",
-       "10                    Weihnachtsfeier\n",
-       "Name: Einnahme / Ausgabe, dtype: object"
+       "    Unnamed: 0               Einnahme / Ausgabe  Konto      Datum  Betrag  \\\n",
+       "0          NaN    Aufwandsentschädigung Trainer     61 2024-12-01   -3200   \n",
+       "1          NaN  Aufwandsentschädigung RSA Kurse     61 2002-12-01    -150   \n",
+       "2          NaN                  Weihnachtsfeier     87 2024-12-31   -1800   \n",
+       "3          NaN                          Spenden     32 2024-12-15    1000   \n",
+       "4          NaN           Zuschuss Rettungswache    605 2024-10-12    2500   \n",
+       "5          NaN             Eigenbeteiligung DMM    607 2024-11-01      75   \n",
+       "6          NaN                Sponsoring Kübler    806 2024-10-01     500   \n",
+       "7          NaN                   Öka / Ehrungen     42 2024-12-15    -200   \n",
+       "8          NaN                         Ausflüge     44 2024-12-01    -500   \n",
+       "9          NaN                 Hallenbad Wernau     61 2024-11-05   -3200   \n",
+       "10         NaN                              DMM     67 2024-11-01    -900   \n",
+       "\n",
+       "     Gewinn  Unnamed: 6  Prognose:  2599.51  \n",
+       "0   5274.51         NaN        NaN      NaN  \n",
+       "1   5124.51         NaN        NaN      NaN  \n",
+       "2   3324.51         NaN        NaN      NaN  \n",
+       "3   4324.51         NaN        NaN      NaN  \n",
+       "4   6824.51         NaN        NaN      NaN  \n",
+       "5   6899.51         NaN        NaN      NaN  \n",
+       "6   7399.51         NaN        NaN      NaN  \n",
+       "7   7199.51         NaN        NaN      NaN  \n",
+       "8   6699.51         NaN        NaN      NaN  \n",
+       "9   3499.51         NaN        NaN      NaN  \n",
+       "10  2599.51         NaN        NaN      NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "forecast['Einnahme / Ausgabe']"
+    "forecast"
    ]
   },
   {
